--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
     }
     main {
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
+      height: 100vh;
     }
   </style>
 </head>
