--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   
   <style>
     body {
+      margin: 0;
       background: black;
       color: white;
       font-size: 1em;
@@ -21,6 +22,11 @@
       align-items: center;
       height: 100vh;
     }
+    h1 {
+      font-weight: 400;
+      margin-bottom: 10px;
+    }
+	  
   </style>
 </head>
 
