--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 </head>
 
 <body>
-	<main>
+  <main>
     <h1>Black Ship Labs</h1>
-    marine@blackshiplabs.com
-	</main>
+    info@blackshiplabs.com
+  </main>
 </body>
 
 </html>
