--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <style>
     body {
       margin: 0;
-      background: black;
+      background: #00e7ff;
+      background: linear-gradient(to left, #ff0047, #00e7ff);
       color: white;
       font-size: 1em;
       font-family: 'Roboto', Helvetica, Arial, sans-serif;
