--- a/index.html
+++ b/index.html
@@ -22,13 +22,16 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
+	    padding: 30px;
+      box-sizing: border-box;
     }
     h1 {
       font-weight: 400;
       margin-bottom: 10px;
     }
     svg {
-      width: 200px; 
+      width: 150px; 
+      height: 150px;
     }
   </style>
 </head>
